styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Outfit", Arial, Helvetica, sans-serif;
}

:root {
    /* Colors */
    --color-text: #fff;
    --color-primary: #576cbc;
    --color-secondary: #19376d;
    --color-dark: #0b2447;
    --color-bg: #04152d;
    --color-tertiary: #61dbfd;
    --color-dogerBlue: #2fa1ff;
    --color-four: #ffae2f;
    --color-five: #c82fff;

    /* Fonts */
    --font-roboto: "Roboto";
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: var(--color-bg);
    width: 100%;
    height: 100%;
}

section {
    margin-bottom: 6rem;
    margin-left: 10%;
    margin-right: 10%;
}

@media screen and (max-width:830px) {
    section {
        margin-right: 3%;
        margin-left: 3%;
    }
}

.navBar {
    /* position: fixed; */
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 61px 10%;
    z-index: 1000;
}

.navTitle {
    font-size: 30px;
    font-weight: 600;
    text-decoration: none;
    color: var(--color-text);
}

.menu {
    display: flex;
}

.menuItems {
    display: flex;
    gap: 47px;
    list-style: none;
}

.menuItems a {
    font-size: 25px;
    color: var(--color-text);
    text-decoration: none;
}

.menuBtn {
    display: none;
}

@media screen and (max-width: 830px) {
    .navBar {
        flex-direction: column;
        align-items: flex-start;
        background-color: var(--color-dark);
        padding: 45px 10%;
    }

    .menu {
        position: absolute;
        right: 0;
        margin-right: 10%;
        flex-direction: column;
        align-items: flex-end;
        gap: 11px;
        z-index: 3;
    }

    .menuBtn {
        display: block;
        cursor: pointer;
        width: 10%;
        height: 10%;
    }

    .menuItems {
        display: none;
        flex-direction: column;
        align-items: center;
        gap: 13px;
        border-radius: 10px;
        background: rgb(25, 55, 109);
        background: linear-gradient(0deg, rgba(25, 55, 109, 0.2)0%, rgba(25, 55, 109, 1)100%);
        padding: 24px 33px;
        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
    }

    .menuOpen {
        display: flex;
        z-index: 1;
    }
}

/* hero */

.heroContainer {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 10rem;
    z-index: 1;

}

.heroContent {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--color-text);
    z-index: 1;
}

.heroTitle {
    font-size: 40px;
    margin-bottom: 52px;
    margin-left: 7rem;
    font-family: var(--font-roboto);
    white-space: pre-line;

}



.contactBtn {
    text-decoration: none;
    background-color: var(--color-primary);
    color: var(--color-text);
    border-radius: 100px;
    font-size: 30px;
    font-weight: 600;
    padding: 17px 26px;
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
}

.heroImg {
    width: 45%;
    z-index: 1;
    transition: transform .5s ease-in-out;
}


.heroImg:hover {
    transform: scale(1.2)
}

.topBlur {
    position: absolute;
    width: 50vw;
    height: 50vw;
    min-width: 350px;
    min-width: 350px;
    top: -128px;
    left: -10vw;
    border-radius: 764px;
    background: rgba(25, 55, 109, 0.7);
    filter: blur(100px);
    z-index: 0;
}

.bottomBlur {
    position: absolute;
    width: 70vw;
    height: 50vw;
    min-width: 350px;
    min-width: 250px;
    top: 246px;
    right: -25vw;
    border-radius: 764px;
    background: rgba(25, 55, 109, 0.7);
    filter: blur(100px);
}

@media screen and (max-width: 830px) {
    .heroContainer {
        margin-top: 7rem;
        flex-direction: column-reverse;
    }

    .heroTitle {
        margin-left: 0;
    }
}

/* About */

.aboutContainer {
    position: relative;
    display: flex;
    color: var(--color-text);
    z-index: 1;
    opacity: 0;
    transform: translateX(200px);
    transition:
        opacity 1.5s ease-out,
        transform 1.5s cubic-bezier(0.22, 1, 0.36, 1);
}

.aboutContainer.isVisible {
    opacity: 1;
    transform: translateX(0);
}

.aboutLeft {
    width: 50%;
}

.aboutLeft img {
    margin-left: 10rem;
}

.aboutRight {
    width: 50%;
    margin-top: 2rem;
}

.heading {
    color: var(--color-text);
    font-size: 30px;
    font-weight: 700;
    letter-spacing: 1.75px;
    text-transform: uppercase;
    padding: 5px;
    margin-bottom: 2rem;
}

.subHeading {
    padding: 30px;
}



.aboutPara {
    padding-left: 30px;
    padding-bottom: 20px;
}

.aboutRight strong {
    color: var(--color-dogerBlue);
}

.skillsContainer {
    display: flex;
    margin-left: 10px;
}

.skills {
    margin-left: 20px;
    padding: 10px;
    border: 2px solid var(--color-dogerBlue);
    border-radius: 10px;

}

@media screen and (max-width: 830px) {
    .aboutContainer {
        display: block;
    }

    .aboutLeft img {
        display: none;
    }

    .aboutRight {
        width: 100%;
    }

    .skillsContainer {
        flex-wrap: wrap;
    }

    .skills {
        margin-bottom: 1rem;
    }
}

/* Education */

.educationContainer {
    height: 600px;
    width: 90%;
    margin-right: auto;
    margin-left: auto;
}

.educationContent {
    width: 100%;
    height: 100%;
    display: flex;
    background-color: var(--color-secondary);
    border-radius: 0 0 30px 30px;
    overflow: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
    scroll-behavior: smooth;
    overflow-y: auto;
    overflow-x: hidden;
}

.hide-scrollbar::-webkit-scrollbar {
    display: none;
}

.progressBar {
    background-color: var(--color-five);
    width: 0%;
    height: .5rem;
    transition: width 0.6s ease-in-out;
}

.educationLeft,
.educationRight {
    width: 100%;
}

.educationLeft {
    margin-top: 3rem;
}

.educationRight {
    margin-top: 15rem;
}

.divider {
    position: sticky;
    top: 0;
    border: 2px solid white;
    height: 100%;
}
/* ... */

